--- a/game.html
+++ b/game.html
@@ -12,7 +12,7 @@
                         <img src="logogame1.png">
                     </div>
                     <ul class="main-nav">
-                      <li class="active"><a href=" "> HOME </a></li>
+                      <li class="active"><a href="game.html"> HOME </a></li>
                       <li><a href= "game1.html" > INSTRUCTIONS </a></li>
                       <li><a href= "game1.html"> NEXT </a></li>
                       <li><a href= "end.html" > END </a></li>
