--- a/game1.html
+++ b/game1.html
@@ -12,7 +12,7 @@
                         <ul class="main-nav">
                             <li><a href="game.html"> HOME </a></li>
                             <li class="active"><a href="page 2.html" > INSTRUCTIONS </a></li>
-                            <li><a href="game2.html"> NEXT PAGE </a></li>
+                            <li><a href="ques1.html"> NEXT PAGE </a></li>
                             <li><a href="end.html" > END </a></li>
                         </ul>
             </div>
@@ -28,7 +28,7 @@
 
         </div>
         <div class="button">
-                <a href="game2.html" class="btn btn1"> START GAME </a>
+                <a href="ques1.html" class="btn btn1"> START GAME </a>
             </div>
 
 
