--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
                       <li class="active"><a href=""> LOG-IN </a></li>
                       <li><a href="game1.html" > INSTRUCTIONS </a></li>
                       <li><a href="game.html"> NEXT PAGE </a></li>
-                      <li><a href="page 2.html" > END </a></li>
+                      <li><a href="end.html" > END </a></li>
                     </ul>
                 </div>
                 <div class="headline">
