--- a/ques1.html
+++ b/ques1.html
@@ -24,7 +24,7 @@
                     <h1> <u> Question 1 </u></h1>
                 </div>
 
-                <img src="cc2.jpg">
+                <img src="https://media.giphy.com/media/go5Iy1VIpVwqI/giphy.gif">
 
             <p> **Enter Question** <br><br>
                 **if the answer entered by the participants is <br>
