--- a/pass1.html
+++ b/pass1.html
@@ -19,7 +19,7 @@
 
         <div class="para">
 
-            <img src="cc2.jpg">
+            <img src="https://media.giphy.com/media/xT9IgzoKnwFNmISR8I/giphy.gif">
 
         
 
