--- a/pass1.html
+++ b/pass1.html
@@ -4,6 +4,8 @@
         <link href="style3.css" rel="stylesheet" type="text/css">
     </head>
     <body>
+         
+      <background src="https://media.giphy.com/media/xT9IgzoKnwFNmISR8I/giphy.gif">
         <header>
             <div class="row">
                     <div class = "logo">
