--- a/pass1.html
+++ b/pass1.html
@@ -3,9 +3,7 @@
         <title> Ques 1</title>
         <link href="style3.css" rel="stylesheet" type="text/css">
     </head>
-    <body>
-         
-      <background src="https://media.giphy.com/media/xT9IgzoKnwFNmISR8I/giphy.gif">
+    <body background="https://media.giphy.com/media/xT9IgzoKnwFNmISR8I/giphy.gif">
         <header>
             <div class="row">
                     <div class = "logo">
