--- a/pass2.html
+++ b/pass2.html
@@ -3,7 +3,12 @@
         <title> Ques 2</title>
         <link href="style3.css" rel="stylesheet" type="text/css">
     </head>
-    <body>
+    <body 
+          { 
+           background="https://media.giphy.com/media/rj12FejFUysTK/giphy.gif"
+           background-repeat:no-repeat;
+         }
+     >
         <header>
             <div class="row">
                     <div class = "logo">
