--- a/pass3.html
+++ b/pass3.html
@@ -3,7 +3,12 @@
         <title> Ques 3</title>
         <link href="style3.css" rel="stylesheet" type="text/css">
     </head>
-    <body>
+   <body 
+          { 
+           background="https://media.giphy.com/media/3oxHQrAmG6bd6RRh4s/giphy.gif"
+           background-repeat:no-repeat;
+         }
+     >
         <header>
             <div class="row">
                     <div class = "logo">
