--- a/game1.html
+++ b/game1.html
@@ -3,7 +3,7 @@
         <title> Game Rules</title>
         <link href="style1.css" rel="stylesheet" type="text/css">
     </head>
-    <body>
+    <body background="rules 1.jpg">
         <header>
             <div class="row">
                     <div class = "logo">
@@ -17,20 +17,25 @@
                         </ul>
             </div>
 
-        <div class="para">
-
-                <div class="headline">
+                    <br>
                     <h1> <u> RULES And INSTRUCTIONS </u></h1>
-                </div>
 
-            <p>Enter Game rules bullet wise.<br>
-            pdgkuvuydt fukktyrfhklk ghkm fgkljlj </p>
+            <p>Enter Game rules bullet wise:<br>
+                1.Participants will register in teams of 3-5 people. Each team will be given a PC.
+                <br>2.The game consists of 10 levels. 
+                <br>3.On each level a coding puzzle will be given online to the participants, on solving which they’ll get a location within the campus like canteen or auditorium.
+                <br>4.The participants will go to the given location and find a hidden QR code after scanning of  which they will generate a password which needs to be entered on the respective PC  to unlock the next level. 
+                <br>5. Then same steps from 3 onwards will be repeated till level 10.
+                <br>6.The team to solve all/maximum no. of levels first wins!
+                <br>7.Out of the 3-5 members, 1-2 people should always be seated at the PC solving the coding puzzles. Rest will go to respective locations to find the hidden QR codes.
+                <br>8.The Puzzles include various coding puzzles, error detection, cryptography (basic) and Theme based questions.
+                 </p>
 
-        </div>
+    
         <div class="button">
                 <a href="ques1.html" class="btn btn1"> START GAME </a>
             </div>
-
+<br><br>
 
         </header>
         
