--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
         <link href="style login.css" rel="stylesheet" type="text/css">
   
     </head>
-    <body>
+    <body background="background.jpg">
             <header>
                 <div class="row">
                     <div class = "logo">
