--- a/game.html
+++ b/game.html
@@ -5,7 +5,7 @@
         <link href="style.css" rel="stylesheet" type="text/css">
   
     </head>
-    <body>
+    <body background="treasure.jpg">
             <header>
                 <div class="row">
                     <div class = "logo">
@@ -18,13 +18,14 @@
                       <li><a href= "end.html" > END </a></li>
                     </ul>
                 </div>
-                <div class="here">
+                <br>
+                
                     <h1>Welcome to Code Quest</h1>
 
                     <div class="button">
                         <a href="game1.html" class="btn btn1">START </a>
                     </div>
-                </div>
+            
 
             </header>
 
