--- a/end.html
+++ b/end.html
@@ -5,25 +5,21 @@
         <link href="end.css" rel="stylesheet" type="text/css">
   
     </head>
-    <body>
+    <body background="treasure.jpg">
             <header>
                 <div class="row">
                     <div class = "logo">
-                        <img src="logogame1.png">
+                        <img src="logogame final.png">
                     </div>
                     <ul class="main-nav">
-                      <li><a href="game.html"> HOME </a></li>
-                      <li><a href= "game1.html" > INSTRUCTIONS </a></li>
                       <li class="active"><a href= " " > END </a></li>
                     </ul>
                 </div>
-                <div class="here">
                     <h1>Thank You for Playing Code Quest</h1>
 
                     <div class="button">
-                        <a href="login.html" class="btn btn1"> Play Again </a>
+                        <a href="login test.html" class="btn btn1"> Play Again </a>
                     </div>
-                </div>
 
             </header>
 
