--- a/pass4.html
+++ b/pass4.html
@@ -9,7 +9,7 @@
         <header>
             <div class="row">
                     <div class = "logo">
-                                <img src="logogame1.png">
+                                <img src="logogame final.png">
                      </div>
                         <ul class="main-nav">
                             <li class="active"><a href=""> QUES 4 </a></li>
@@ -17,11 +17,8 @@
                             <li><a href="game1.html"> INSTRUCTIONS </a></li>
                             <li><a href="end.html" > END </a></li>
                         </ul>
-            </div>
-            <div class="picture">
-                <img src="cc2.jpg">
-            </div>   
-
+            </div>  
+<br><br>
              <h2>Congratulations! </h2> <br>
                 <p>
                     You have discovered the first location!<br>
@@ -41,10 +38,6 @@
 
             </form>
             <br><br>
-            <div class="button">
-                <a href="Ques5.html" class="btn btn1"> proceed </a>
-            </div>       
-           
 
         </header>
         
