--- a/game.html
+++ b/game.html
@@ -9,12 +9,11 @@
             <header>
                 <div class="row">
                     <div class = "logo">
-                        <img src="logogame1.png">
+                        <img src="logogame final.png">
                     </div>
                     <ul class="main-nav">
                       <li class="active"><a href="game.html"> HOME </a></li>
                       <li><a href= "game1.html" > INSTRUCTIONS </a></li>
-                      <li><a href= "game1.html"> NEXT </a></li>
                       <li><a href= "end.html" > END </a></li>
                     </ul>
                 </div>
