--- a/game1.html
+++ b/game1.html
@@ -7,12 +7,11 @@
         <header>
             <div class="row">
                     <div class = "logo">
-                                <img src="logogame1.png">
+                                <img src="logogame final.png">
                      </div>
                         <ul class="main-nav">
                             <li><a href="game.html"> HOME </a></li>
                             <li class="active"><a href="page 2.html" > INSTRUCTIONS </a></li>
-                            <li><a href="ques1.html"> NEXT PAGE </a></li>
                             <li><a href="end.html" > END </a></li>
                         </ul>
             </div>
