--- a/pass1.html
+++ b/pass1.html
@@ -3,11 +3,11 @@
         <title> Ques 1</title>
         <link href="style3.css" rel="stylesheet" type="text/css">
     </head>
-    <body background="https://media.giphy.com/media/Yj6dHPsht8wXavhDOj/giphy.gif">
+    <body background="avengers4.gif">
         <header>
             <div class="row">
                     <div class = "logo">
-                                <img src="logogame1.png">
+                                <img src="logogame final.png">
                      </div>
                         <ul class="main-nav">
                             <li class="active"><a href=""> QUES 1 </a></li>
@@ -16,9 +16,8 @@
                             <li><a href="end.html" > END </a></li>
                         </ul>
             </div>
-            <img src="cc2.jpg">
 
-
+<br><br>
              <h2>Congratulations! </h2> <br>
                 <p>
                     You have discovered the first location!<br>
@@ -38,10 +37,6 @@
 
             </form>
             <br><br>
-               
-            <div class="button">
-                <a href="ques 2.html" class="btn btn1"> proceed </a>
-            </div>
            
 
         </header>
