--- a/login test.html
+++ b/login test.html
@@ -6,8 +6,7 @@
   
     </head>
     <body onload="noBack();"
-	   onpageshow="if(event.persisted) noBack():" onunload="" >
-	  background="avengerslogin.jpg">
+	   onpageshow="if(event.persisted) noBack():" onunload="" 
             <header>
                 <div class="row">
                     <div class = "logo">
