--- a/end.html
+++ b/end.html
@@ -5,7 +5,11 @@
         <link href="end.css" rel="stylesheet" type="text/css">
   
     </head>
-    <body background="treasure.jpg">
+   <body onload="noBack();"
+
+      onpageshow="if(event.persisted) noBack():" onunload=""
+ 
+          background="treasure.jpg">
             <header>
                 <div class="row">
                     <div class = "logo">
@@ -22,6 +26,17 @@
                     </div>
 
             </header>
+
+
+
+<script type="text/javascript">
+
+window.history.forward();
+
+function noBack() { window.history.forward(); }
+
+window.onbeforeload = function() {return" Your work will be lost." ;};
+</script>
 
 
     </body>
