--- a/game.html
+++ b/game.html
@@ -5,7 +5,10 @@
         <link href="style.css" rel="stylesheet" type="text/css">
   
     </head>
-    <body background="treasure.jpg">
+    <body onload="noBack();"
+
+onpageshow="if(event.persisted) noBack():" onunload="" ;
+ background="treasure.jpg">
             <header>
                 <div class="row">
                     <div class = "logo">
@@ -27,6 +30,18 @@
             
 
             </header>
+        
+
+
+<script type="text/javascript">
+
+window.history.forward();
+
+function noBack() { window.history.forward(); }
+
+window.onbeforeload = function() {return" Your work will be lost." ;};
+</script>
+
 
 
     </body>
