--- a/game1.html
+++ b/game1.html
@@ -3,7 +3,10 @@
         <title> Game Rules</title>
         <link href="style1.css" rel="stylesheet" type="text/css">
     </head>
-    <body background="rules 1.jpg">
+    <body   onload="noBack();"
+
+onpageshow="if(event.persisted) noBack():" onunload="" ;
+ background="rules 1.jpg">
         <header>
             <div class="row">
                     <div class = "logo">
@@ -38,5 +41,16 @@
 
         </header>
         
+
+
+<script type="text/javascript">
+
+window.history.forward();
+
+function noBack() { window.history.forward(); }
+
+window.onbeforeload = function() {return" Your work will be lost." ;};
+</script>
+
     </body>
 </html>
