--- a/pass2.html
+++ b/pass2.html
@@ -3,7 +3,10 @@
         <title> Ques 2</title>
         <link href="style3.css" rel="stylesheet" type="text/css">
     </head>
-    <body background="avengersgif2.gif">
+    <body  onload="noBack();"
+
+onpageshow="if(event.persisted) noBack():" onunload="" ;
+background="avengersgif2.gif">
         <header>
             <div class="row">
                     <div class = "logo">
@@ -42,7 +45,14 @@
         </header>
         
     </body>
-    <script>
+    <script  type="text/javascript">
+
+window.history.forward();
+
+function noBack() { window.history.forward(); }
+
+window.onbeforeload = function() {return" Your work will be lost." ;};
+>
 
             function myfunc()
             {
