--- a/pass3.html
+++ b/pass3.html
@@ -3,7 +3,10 @@
         <title> Ques 3</title>
         <link href="style3.css" rel="stylesheet" type="text/css">
     </head>
-    <body background="avengers1.jpg">
+    <body  onload="noBack();"
+
+onpageshow="if(event.persisted) noBack():" onunload="" ;
+background="avengers1.jpg">
         <header>
             <div class="row">
                     <div class = "logo">
@@ -42,7 +45,17 @@
         </header>
         
     </body>
-    <script>
+   
+
+
+<script type="text/javascript">
+
+window.history.forward();
+
+function noBack() { window.history.forward(); }
+
+window.onbeforeload = function() {return" Your work will be lost." ;};
+
 
             function myfunc()
             {
