--- a/Ques5.html
+++ b/Ques5.html
@@ -4,7 +4,17 @@
         <title> Ques 5 </title>
         <link href="style2.css" rel="stylesheet" type="text/css">
     </head>
-    <script>
+    
+
+
+<script type="text/javascript">
+
+window.history.forward();
+
+function noBack() { window.history.forward(); }
+
+window.onbeforeload = function() {return" Your work will be lost." ;};
+
 
         function myfunc()
         {
@@ -25,7 +35,10 @@
         }
         
         </script>
-    <body background="codinggif2.gif">
+    <body   onload="noBack();"
+
+onpageshow="if(event.persisted) noBack():" onunload="" ;
+background="codinggif2.gif">
         <header>
             <div class="row">
                     <div class = "logo">
