--- a/pass1.html
+++ b/pass1.html
@@ -82,7 +82,7 @@ if (document.hasFocus())
    
 else 
 {  x.innerHTML = "The document DOES NOT have focus.";
-  alert("minimize kyu kar raha tha! Treasure hunt ends here! " );
+  alert("Treasure hunt ends here! " );
   self.close();
  }
 }
