--- a/game.html
+++ b/game.html
@@ -40,10 +40,28 @@ window.history.forward();
 function noBack() { window.history.forward(); }
 
 window.onbeforeload = function() {return" Your work will be lost." ;};
-</script>
+
+    
+
+setInterval("myFunction()", 1);
+
+function myFunction() {
+  var x = document.getElementById("demo");
+if (document.hasFocus()) 
+{ x.innerHTML = "The document has focus.";
+ }
+   
+else 
+{  x.innerHTML = "The document DOES NOT have focus.";
+  alert(" Treasure hunt ends here! " );
+  self.close();
+ }
+}
+        
+        </script>
 
 
-
+<p id="demo"></p>
     </body>
 
 </html>
