--- a/ques1.html
+++ b/ques1.html
@@ -21,7 +21,15 @@ background= "coding5.gif">
                             <li><a href="end.html" > END </a></li>
                         </ul>
             </div>
-
+<div id="countdown">
+  <div id='tiles'></div>
+  <div class="labels">
+    <li>Days</li>
+    <li>Hours</li>
+    <li>Mins</li>
+    <li>Secs</li>
+  </div>
+</div>
                 <div class="headline">
                     <h1> <u> <br> Question 1 </u></h1>
                 </div>
