--- a/Ques5.html
+++ b/Ques5.html
@@ -38,7 +38,7 @@ window.onbeforeload = function() {return" Your work will be lost." ;};
     <body   onload="noBack();"
 
 onpageshow="if(event.persisted) noBack():" onunload="" ;
-background="codinggif2.gif">
+background="codinggif.gif">
         <header>
             <div class="row">
                     <div class = "logo">
