--- a/pass1.html
+++ b/pass1.html
@@ -5,8 +5,7 @@
     </head>
     <body  onload="noBack();"
 
-onpageshow="if(event.persisted) noBack():" onunload="" ;
- background="avengers4.gif">
+onpageshow="if(event.persisted) noBack():" onunload="" ; background="aven4.jpg">
         <header>
             <div class="row">
                     <div class = "logo">
@@ -20,17 +19,19 @@ onpageshow="if(event.persisted) noBack():" onunload="" ;
                         </ul>
             </div>
 
-<br><br>
-             <h2>Congratulations! </h2> <br>
+<br><br><div class="transbox">
+                 <h2>Congratulations! </h2> <br>
                 <p>
-                    You have discovered the first location!<br>
-                /*Enter Location*/
+                    To solve this little fix<br>
+                    Eat five plates pasta and maggi's six<br>
+                    With only few options to help you in choosing<br>
+                    This is where you must go looking
             </p>
 
             <form name= "myform" action=" " method="post">
             <div>
 
-               <label for="Solution"> Solution </label>
+               <label for="Solution"> Enter Riddle Solution : </label>
                <input type="text" name="Solution"> 
             </div>
             <div>       
@@ -42,7 +43,7 @@ onpageshow="if(event.persisted) noBack():" onunload="" ;
             <br><br>
            
         </header>
-        
+    </div>
     </body>
     <script  type="text/javascript">
 
