--- a/pass3.html
+++ b/pass3.html
@@ -6,7 +6,7 @@
     <body  onload="noBack();"
 
 onpageshow="if(event.persisted) noBack():" onunload="" ;
-background="avengers1.jpg">
+background="aven2.jpg">
         <header>
             <div class="row">
                     <div class = "logo">
@@ -19,12 +19,14 @@ background="avengers1.jpg">
                             <li><a href="end.html" > END </a></li>
                         </ul>
             </div>
-
-            <br><br>
+<div class="transbox">
+                <br><br>
              <h2>Congratulations! </h2> <br>
                 <p>
-                    You have discovered the first location!<br>
-                /*Enter Location*/
+                    To solve this little fix,<br>
+                        Learn to dribble with other tricks,<br>
+                        Team mates, opponents and so much enjoying,<br>
+                        This is where you must go looking
             </p>
 
             <form name= "myform" action=" " method="post">
@@ -41,7 +43,7 @@ background="avengers1.jpg">
                     </form>
                     <br><br>
         </header>
-        
+    </div>
     </body>
    
 
