--- a/ques4.html
+++ b/ques4.html
@@ -41,7 +41,7 @@ function noBack() { window.history.forward(); }
            onload="noBack();"
 
 onpageshow="if(event.persisted) noBack():" onunload="" ;
-background="codinggif.gif">
+background="codinggif2.gif">
         <header>
             <div class="row">
                     <div class = "logo">
