--- a/ques3.html
+++ b/ques3.html
@@ -38,7 +38,7 @@ window.onbeforeload = function() {return" Your work will be lost." ;};
     <body  onload="noBack();"
 
 onpageshow="if(event.persisted) noBack():" onunload="" ;
-background="https://media.giphy.com/media/sRFEa8lbeC7zbcIZZR/giphy.gif">
+background="bgq4.gif">
         <header>
             <div class="row">
                     <div class = "logo">
