--- a/game1.html
+++ b/game1.html
@@ -6,8 +6,7 @@
     </head>
     <body   onload="noBack();"
 
-onpageshow="if(event.persisted) noBack():" onunload="" ;
- background="rules 1.jpg">
+onpageshow="if(event.persisted) noBack():" onunload="" ;>
         <header>
             <div class="row">
                     <div class = "logo">
@@ -22,10 +21,10 @@ onpageshow="if(event.persisted) noBack():" onunload="" ;
             </div>
 
                     <br>
-                    <h1> <u> RULES And INSTRUCTIONS </u></h1>
+                    
 
-            <p>
-                
+            <div class="rules">
+                    <h1> RULES And INSTRUCTIONS </h1>
                 <ul class="list">
                 <li> Participants will register in teams of 3-5 people. Each team will be allotted a PC.
 
@@ -48,6 +47,7 @@ onpageshow="if(event.persisted) noBack():" onunload="" ;
                 </li>
                 <li>Team members can interchange their position after each level.
                 </li>
+                <li>All answers are single word answers, and must be entered in small-caps.</li>
                 <li>The Puzzles include various logical, coding questions, error detection, and Theme based puzzles.
                 </li>
                 <li> In case of a tie, a tie-breaker will take place to determine the winner.
