--- a/pass1.html
+++ b/pass1.html
@@ -19,7 +19,9 @@ onpageshow="if(event.persisted) noBack():" onunload="" ; background="aven4.jpg">
                         </ul>
             </div>
 
-<br><br><div class="transbox">
+<br><br>
+
+<div class="transbox">
                  <h2>Congratulations! </h2> <br>
                 <p>
                     To solve this little fix<br>
@@ -43,7 +45,7 @@ onpageshow="if(event.persisted) noBack():" onunload="" ; background="aven4.jpg">
             <br><br>
            
         </header>
-    </div>
+    </div></div>
     </body>
     <script  type="text/javascript">
 
@@ -58,7 +60,7 @@ window.onbeforeload = function() {return" Your work will be lost." ;};
             {
               var a=document.myform.Solution.value;
             
-              if(a=="e")
+              if(a=="vision")
               {
                  alert(" You got it right " );
                  window.location.replace(" ques 2.html ");
