--- a/ques4.html
+++ b/ques4.html
@@ -58,6 +58,7 @@ background="codinggif2.gif">
                 <div class="headline">
                     <h1> <u><br> Question 4 </u></h1>
                 </div>
+                <div class="transbox">
 
             <p> **Enter Question** <br><br>
                 **if the answer entered by the participants is <br>
@@ -77,7 +78,7 @@ background="codinggif2.gif">
         
                     </form>
             
-           </p> 
+           </p> </div>
 
     </header>    
     </body>
