--- a/end.html
+++ b/end.html
@@ -7,9 +7,10 @@
     </head>
    <body onload="noBack();"
 
-      onpageshow="if(event.persisted) noBack():" onunload=""
+      onpageshow="if(event.persisted) noBack():" onunload="";
  
-          background="treasure.jpg">
+          background="treasure.jpg
+          ">
             <header>
                 <div class="row">
                     <div class = "logo">
@@ -19,7 +20,7 @@
                       <li class="active"><a href= " " > END </a></li>
                     </ul>
                 </div>
-                    <h1>Thank You for Playing Code Quest</h1>
+                   <br> <h1>Thank You for Playing Code Quest</h1>
 
                     <div class="button">
                         <a href="login test.html" class="btn btn1"> Play Again </a>
