--- a/game.html
+++ b/game.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> code quest 2</title>
+        <title> code quest </title>
         <link href="style.css" rel="stylesheet" type="text/css">
   
     </head>
