--- a/pass3.html
+++ b/pass3.html
@@ -6,7 +6,7 @@
     <body  onload="noBack();"
 
 onpageshow="if(event.persisted) noBack():" onunload="" ;
-background="aven2.jpg">
+background="aven10.jpg">
         <header>
             <div class="row">
                     <div class = "logo">
@@ -19,8 +19,8 @@ background="aven2.jpg">
                             <li><a href="end.html" > END </a></li>
                         </ul>
             </div>
-<div class="transbox">
-                <br><br>
+            <br>
+            
              <h2>Congratulations! </h2> <br>
                 <p>
                     To solve this little fix,<br>
@@ -43,7 +43,7 @@ background="aven2.jpg">
                     </form>
                     <br><br>
         </header>
-    </div>
+   
     </body>
    
 
@@ -61,7 +61,7 @@ window.onbeforeload = function() {return" Your work will be lost." ;};
             {
               var a=document.myform.Solution.value;
             
-              if(a=="e")
+              if(a=="bucky")
               {
                  alert(" You got it right " );
                  window.location.replace(" ques4.html ");
