--- a/ques 2.html
+++ b/ques 2.html
@@ -48,7 +48,7 @@ background="bgq2.gif">
                      </div>
                         <ul class="main-nav">
                             <li class="active"><a href=" "> QUES 2 </a></li>
-                            <li><a href="game.html"> HOME </a></li>
+                            <li><a href="file:///C:/Users/Lenin%20Gupta/Desktop/innerve-game-master/newgame.html"> HOME </a></li>
                             <li><a href="game1.html" > INSTRUCTIONS </a></li>
                             <li><a href="end.html" > END </a></li>
                         </ul>
@@ -59,15 +59,24 @@ background="bgq2.gif">
                 </div>
                 <div class="transbox">
 
-            <p> **Enter Question** <br><br>
-                **if the answer entered by the participants is <br>
-                correct the next window will pop-up <br>
-                 for now click this button to proceed.**<br>
+            <p> <br>
+                Given N planets numbered from 1 to N . A skrull at planet 1, jumps from planet to planet in multiples of Aj (Aj, 2Aj, 3Aj).
+                j is specific to the skrull. Whenever a skrull reaches a planet, it makes a small colony there. You have to find out how many planets, from 1 to N, are left not colonised after all K skrulls have reached the end. Each skrull has its own jump factor denoted by Aj, and each skrull starts at planet number 1.
+               <br><br> Input:
+                The first line consists of a integer T denoting the number of testcases. T test cases follow. Each test case consists of two lines of input. The first line consists of two integers: N, which denotes the number of planets; and K, which denotes the number of skrulls. Second line of each test case consists of K space seperated integers denoting the jumblip factor of skrulls.
+                <br><br>Output:
+                For each testcase, in a new line, print a  single integer denoting the number of planets which  are left not colonised.
+                <br><br>
+                Constraints:<br>
+                1 <= T <= 100<br>
+                1 <= N <= 107<br>
+                1 <= K <= 107<br>
+                1 <= Aj <= 100<br>
             
                  <form name= "myform" action=" " method="post">
                     <div>
         
-                       <label for="Solution"> Solution </label>
+                       <label for="Solution"> Enter Solution: <br></label>
                        <input type="text" name="Solution"> 
                     </div>
                     <div>       
