--- a/game1.html
+++ b/game1.html
@@ -4,9 +4,7 @@
         <link href="style1.css" rel="stylesheet" type="text/css">
         <meta name="viewport" content="width=device-width, initial scale=1.0">
     </head>
-    <body   onload="noBack();"
-
-onpageshow="if(event.persisted) noBack():" onunload="" ;>
+    <body>
         <header>
             <div class="row">
                     <div class = "logo">
