--- a/Ques5.html
+++ b/Ques5.html
@@ -23,7 +23,7 @@ window.onbeforeload = function() {return" Your work will be lost." ;};
           if(a=="e")
           {
              alert(" You got it right " );
-             window.location.replace(" end.html ");
+             window.location.replace(" congratulations.html ");
             
           }
           else
