--- a/congratulations.html
+++ b/congratulations.html
@@ -3,7 +3,7 @@
 <html>
 <body>
 
-<body background="https://media1.tenor.com/images/49078239072dee326254d6a0d1a34ea9/tenor.gif?itemid=8189968  ">
+<body background="congo.gif">
 
 
 <center><h1>CONGRATULATIONS!!!!!</h1></center>
