--- a/congratulations.html
+++ b/congratulations.html
@@ -3,7 +3,7 @@
 <html>
 <body>
 
-<body background="congo.gif">
+<body background="balloon.gif">
 
 
 <center><h1>CONGRATULATIONS!!!!!</h1></center>
