--- a/newend.html
+++ b/newend.html
@@ -22,7 +22,7 @@
                    <br> <h1>Thank You for Playing Code Quest</h1>
 
                     <div class="button">
-                        <a href="login test.html" class="btn btn1"> Play Again </a>
+                        <a href="end.html" class="btn btn1"> END </a>
                     </div>
 
             </header>
