--- a/pass3.html
+++ b/pass3.html
@@ -27,12 +27,12 @@ background="aven10.jpg">
                         Learn to dribble with other tricks,<br>
                         Team mates, opponents and so much enjoying,<br>
                         This is where you must go looking
-            </p>
+            </p><br><hr>
 
             <form name= "myform" action=" " method="post">
                     <div>
         
-                       <label for="Solution"> Solution </label>
+                       <label for="Solution"> Enter solution to riddle obtained at location<br> </label>
                        <input type="text" name="Solution"> 
                     </div>
                     <div>       
