--- a/pass4.html
+++ b/pass4.html
@@ -29,12 +29,12 @@ background="aven5.jpg">
                         Here you get whatever you were wishing,<br>
                         This is where you must go looking.
                 
-            </p>
+            </p><br><hr>
 
         <form name= "myform" action=" " method="post">
             <div>
 
-               <label for="Solution"> Solution </label>
+               <label for="Solution">  Enter solution to riddle obtained at location<br> </label>
                <input type="text" name="Solution"> 
             </div>
             <div>       
