--- a/pass2.html
+++ b/pass2.html
@@ -27,12 +27,12 @@ background="aven1.jpg">
                         Get your racquets and shuttle mix,<br>
                         Smashing, catching, jumping, winning,<br>
                         This is where you must go looking.
-            </p>
+            </p><br><hr>
 
             <form name= "myform" action=" " method="post">
             <div>
 
-                <label for="Solution"> Solution </label>
+                <label for="Solution"> Enter solution to riddle obtained at location<br> </label>
                 <input type="text" name="Solution"> 
             </div>
             <div>       
