--- a/pass1.html
+++ b/pass1.html
@@ -33,7 +33,7 @@ onpageshow="if(event.persisted) noBack():" onunload="" ; background="aven4.jpg">
             <div>
 
                <label for="Solution"> Enter solution to riddle obtained at location : <br></label>
-               <input type="text" name="Solution"> 
+               <input type="text" autocomplete="off" name="Solution"> 
             </div>
             <div>       
                <input type="button" class="submit" value="Submit" onclick="myfunc ()">
