--- a/pass4.html
+++ b/pass4.html
@@ -35,7 +35,7 @@ background="aven5.jpg">
             <div>
 
                <label for="Solution">  Enter solution to riddle obtained at location<br> </label>
-               <input type="text" name="Solution"> 
+               <input type="text" autocomplete="off" name="Solution"> 
             </div>
             <div>       
                <input type="button" class="submit" value="Submit" onclick="myfunc ()">
