--- a/ques3.html
+++ b/ques3.html
@@ -93,7 +93,7 @@ background="bgq4.gif">
                     <div>
         
                        <label for="Solution"> Solution </label>
-                       <input type="text" name="Solution"> 
+                       <input type="text" autocomplete="off" name="Solution"> 
                     </div>
                     <div>      
                        <input type="button" class="submit" value="Submit" onclick="myfunc ()">
