--- a/ques4.html
+++ b/ques4.html
@@ -76,7 +76,7 @@ background="codinggif2.gif">
                     <div>
         
                        <label for="Solution"> Solution </label>
-                       <input type="text" name="Solution"> 
+                       <input type="text" autocomplete="off" name="Solution"> 
                     </div>
                     <div>      
                        <input type="button" class="submit" value="Submit" onclick="myfunc ()">
