--- a/pass2.html
+++ b/pass2.html
@@ -70,12 +70,14 @@ var i=0;
               else
               {
                 alert("You have entered an incorrect answer. Please try again." );
+                  i++;
               }
             }
                 
 else
 {
    alert("All attempts are used !" );
+    window.location.replace(" attempts.html ");
 }
              
             }
