--- a/ques 2.html
+++ b/ques 2.html
@@ -30,12 +30,14 @@ var i=0;
           else
           {
             alert("You have entered an incorrect answer. Please try again." );
+              i++;
           }
         }
             
 else
 {
    alert("All attempts are used !" );
+    window.location.replace(" attempts.html ");
 }
          
         }
