--- a/ques4.html
+++ b/ques4.html
@@ -30,6 +30,7 @@ var i=0;
           else
           {
             alert("You have entered an incorrect answer. Please try again." );
+              i++;
           }
         }
             
@@ -38,6 +39,7 @@ var i=0;
 else
 {
    alert("All attempts are used !" );
+    window.location.replace(" attempts.html ");
 } 
         }
         
