--- a/Ques5.html
+++ b/Ques5.html
@@ -29,13 +29,15 @@ var i=0;
           }
           else
           {
-            alert("You have entered an incorrect answer. Please try again." );
+            alert("You have entered an incorrect answer. Please try again." 
+                  i++;
           }
         }
           
 else
 {
    alert("All attempts are used !" );
+      window.location.replace(" attempts.html ");        
 }  
          
         }
