--- a/ques4.html
+++ b/ques4.html
@@ -69,10 +69,20 @@ background="codinggif2.gif">
                 </div>
                 
 
-            <p> **Enter Question** <br><br>
-                **if the answer entered by the participants is <br>
-                correct the next window will pop-up <br>
-                 for now click this button to proceed.**<br>
+            <p> Captain Marvel decided to create a new town in the outskirts of the city for skrulls! 
+All the houses in the town are arranged in a rectangle of dimensions n * m, i.e. there are n rows of houses with each row containing mhouses.The first contractor  had to paint all the houses in either red, blue or green color, but they left some of the houses unpainted. 
+When Captain Marvel saw the shoddy work done by the contractor..Next  company works in a rather weird way; It paints each unpainted house with either red, blue or green color uniformly at random. 
+Consider any square shaped sub-grid of houses in this rectangular town. It can be uniquely represented by the top left house and the bottom right house. This sub-grid of houses will be called beautiful if all the houses in it have the same color. The overall beauty of the town will be equal to the total number of beautiful square sub-grids in the town. Captain Marvel’s task is to find expected beauty of the town after the painting work is completed.
+A sub-grid of houses can be uniquely defined by the coordinates of top left and bottom right houses, i.e. (x1, y1) and (x2, y2), respectively. The houses that lie in the sub-grid will be the ones that have their coordinates (x, y) satisfy both x1 ≤ x ≤ x2 and y1 ≤ y ≤ y2. This sub-grid will be a square sub-grid if x2 - x1 = y2 - y1. In particular 1 * 1 cell is also called a square sub-grid. Top left house of the town has coordinates (1, 1) and bottom right house has coordinates (n, m). 
+<br><br>Input
+<br>There is a single test case.
+<br>The first line of the input contains two space separated integers n, m denoting dimensions of town.
+<br>Each of the next n lines contains a string consisting of m characters, each of them can be 'R' (denoting red color), 'G' (denoting green color), 'B' (denoting blue color) or '*' (denoting unpainted house).
+<br><br>Output
+<br>Output a single real number corresponding to the expected beauty of the town after the painting of the houses. Captain Marvel’s answer will be considered correct if its absolute error is within 1e-2 of the answer.
+<br><br>Constraints
+<br>•	1 ≤ n, m ≤ 2000
+
             
                  <form name= "myform" action=" " method="post">
                     <div>
