--- a/ques1.html
+++ b/ques1.html
@@ -46,7 +46,7 @@ background= "coding5.gif">
                     <div>
         
                        <label for="Solution"> Enter Solution: <br></label>
-                       <input type="text" autocomplete="off" name="Solution" style:"text:white;"> 
+                       <input type="text" autocomplete="off" name="Solution" style:"color:white;"> 
                     </div>
                     <div>     
 
