--- a/attempts.html
+++ b/attempts.html
@@ -11,6 +11,7 @@
                 <div class="row">
                     <div class = "logo">
                         <img src="logogame final.png">
+                        <img id="inl" src="white.png">
                     </div>
                     <ul class="main-nav">
                       <li class="active"><a href= " " > END </a></li>
