--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html> 
   
 <head> 
-    <title>main</title> 
+    <title>Code Quest</title> 
 </head> 
   
 <!-- frameset attribute starts here -->
