--- a/pass4.html
+++ b/pass4.html
@@ -13,12 +13,13 @@ background="aven5.jpg">
             <div class="row">
                     <div class = "logo">
                                 <img src="logogame final.png">
+                                <img id="inl" src="white.png">
                      </div>
                         <ul class="main-nav">
                             <li class="active"><a href=""> QUES 4 </a></li>
-                            <li><a href="game.html" > HOME </a></li>
+                            
                             <li><a href="game1.html"> INSTRUCTIONS </a></li>
-                            <li><a href="end.html" > END </a></li>
+                            
                         </ul>
             </div>  <br>
 <br>
