--- a/game1.html
+++ b/game1.html
@@ -24,34 +24,37 @@ onpageshow="if(event.persisted) noBack():" onunload="" ;>
                     
 
             <div class="rules">
-                    <h1> RULES </h1>
+                    <h1> <u>RULES </u></h1>
                 <ul class="list">
-                <li> Participants will register in teams of 3-5 people. Each team will be allotted a PC.
+                <li> Participants will register in teams of 3-4 people. Each team will be allotted a PC.
 
                 </li>
+                <li>The duration of the game is 1 hour, which will begin as soon as you start the game.</li>
                 <li> For the duration of the game, each team will be allowed to carry 1 mobile phone with an app that will be provided to them.
                 </li>
                 <li>The game consists of 5 levels.
                 </li>
-                <li>Each level will be divided into 3 parts.
+                <li>Each level is divided into 3 parts.
                 </li>
                 <ul><li>    A coding puzzle will be given to the participants, on solving which they’ll get the clue to a location within the university campus.
                 The participants will go to the given location and find a hidden QR code.</li>
-                <li>On scanning the QR code, a theme based question will be revealed. The answer to this riddle will be the password to unlock the next level.
+                <li>On scanning the QR code, an Avenger-based question will be revealed. The answer to this riddle will be the password to unlock the next level.
                 </li>
                 <li>This password will have to be entered on the QR app as well as the respective PC.
                 </li></ul>
                 <li>The team to decode all the levels first wins!
                 </li>
-                <li>Out of the 3-5 members, 1-2 people should always be seated at the PC, solving the coding puzzles. Rest of the team members will go to respective locations to find the hidden QR codes.
+                <li>Out of the team, 1-2 members should always be seated at the PC, solving the coding puzzles. Rest of the team members will go to respective locations to find the hidden QR codes.
                 </li>
                 <li>Team members can interchange their position after each level.
                 </li>
+                <li>Participants are not allowed to use compilers, all questions are to be solved logically, on paper.</li>
                 <li>All answers are single word answers, and must be entered in small-caps.</li>
                 <li>The Puzzles include various logical, coding questions, error detection, and Theme based puzzles.
                 </li>
                 <li> In case of a tie, a tie-breaker will take place to determine the winner.
              </li>
+             <li>Use of Internet is Strictly PROHIBITED.</li>
             </ul>
         </p>
 
