--- a/game2.html
+++ b/game2.html
@@ -12,11 +12,11 @@ onpageshow="if(event.persisted) noBack():" onunload="" ;>
                 <div class="row">
                     <div class = "logo">
                         <img src="logogame final.png">
+                        <img id="inl" src="white.png">
                     </div>
                     <ul class="main-nav">
                       <li class="active"><a href="game2.html"> HOME </a></li>
-                      <li><a href= "game1.html" > INSTRUCTIONS </a></li>
-                      <li><a href= "end.html" > END </a></li>
+                     
                     </ul>
                 </div>
             
