--- a/login test.html
+++ b/login test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> code quest 2</title>
+        <title> code quest</title>
         <link href="login test.css" rel="stylesheet" type="text/css">
   
     </head>
@@ -13,10 +13,11 @@
                 <div class="row">
                     <div class = "logo">
                         <img src="logogame final.png">
+                        <img id="inl" src="white.png">
                     </div>
                     <ul class="main-nav">
                       <li class="active"><a href=""> LOG-IN </a></li>
-                      <li><a href="end.html" > END </a></li>
+                      
                     </ul>
                 </div>
                 
