--- a/pass1.html
+++ b/pass1.html
@@ -10,12 +10,13 @@ onpageshow="if(event.persisted) noBack():" onunload="" ; background="aven4.jpg">
             <div class="row">
                     <div class = "logo">
                                 <img src="logogame final.png">
+                                <img id="inl" src="white.png">
                      </div>
                         <ul class="main-nav">
                             <li class="active"><a href=""> QUES 1 </a></li>
-                            <li><a href="game.html" > HOME </a></li>
+                    
                             <li><a href="game1.html"> INSTRUCTIONS </a></li>
-                            <li><a href="end.html" > END </a></li>
+                           
                         </ul>
             </div>
 
