--- a/pass3.html
+++ b/pass3.html
@@ -11,12 +11,13 @@ background="aven10.jpg">
             <div class="row">
                     <div class = "logo">
                                 <img src="logogame final.png">
+                                <img id="inl" src="white.png">
                      </div>
                         <ul class="main-nav">
                             <li class="active"><a href=""> QUES 3 </a></li>
-                            <li><a href="game.html" > HOME </a></li>
+                           
                             <li><a href="game1.html"> INSTRUCTIONS </a></li>
-                            <li><a href="end.html" > END </a></li>
+                            
                         </ul>
             </div>
             <br>
@@ -55,7 +56,7 @@ window.history.forward();
 function noBack() { window.history.forward(); }
 
 window.onbeforeload = function() {return" Your work will be lost." ;};
-vr i=0;
+var i=0;
 
             function myfunc()
             {
