--- a/timer.html
+++ b/timer.html
@@ -18,7 +18,8 @@
 
 <div class="leader"> 
   <h3> <br> <b>User<br><br> </h3>
-    <p>  <br>Current Level : 1 <br><br>
+  
+    <p>  <br> Current Level : Dekhle yaar <br><br>
       Total Levels: 5 </b></p>
 </div>
 <br><br>
@@ -37,6 +38,11 @@
         <p id="demo" class="timer" style="font-size: 24vw;">Time Left</p>
 
 </body>
+
+
+
+
+</script>
 
 
 <script>
