--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head> 
   
 <!-- frameset attribute starts here -->
-<frameset cols="0, 86.5%, 13.5%" > 
+<frameset cols="10%, 90%, 0%" > 
     <frame name="top" />
     <frame name="main" src="login test.html" /> 
     <frame name="leader" src= "timer.html" />
