--- a/pass2.html
+++ b/pass2.html
@@ -70,7 +70,15 @@ var i=0;
               }
               else
               {
-                alert("You have entered an incorrect answer. Please try again." );
+                 if(i==1)
+                         {
+                             alert("Two more Chances!" );
+                          }
+                         else if(i==2)
+                          {
+                              alert("One more chance!" );
+                           }
+                          i++;lert("You have entered an incorrect answer. Please try again." );
                   i++;
               }
             }
