--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
 </head> 
   
 <!-- frameset attribute starts here -->
-<frameset cols="10%, 90%, 0%" > 
-    <frame name="top" />
-    <frame name="main" src="login test.html" /> 
-    <frame name="leader" src= "timer.html" />
+<frameset scrolling="no" rows="12%, 88%" > 
+  
+    <frame noresize="noresize" scrolling = "no"  name="leader" src= "timer.html" />
+    <frame noresize="noresize" name="main" src="login test.html" /> 
+  
 </frameset> 
 <!-- frameset attribute ends here -->
   
+
 </html>
