--- a/timer.html
+++ b/timer.html
@@ -11,36 +11,28 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
       </head>
 
-<body background="timer.jpg">
+<body style="background-color:black;">
 
  
 <br>
 
-<div class="leader"> 
-  <h3> <br> <b>User<br><br> </h3>
+
   
-    <p>  <br> Current Level : Dekhle yaar <br><br>
-      Total Levels: 5 </b></p>
-</div>
-<br><br>
-    <div class="container">
-        <h4><b>Your Progress</b></h4>
-       
-        <div class="progress">
-            <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" 
-            style="width:70%" style="height: 8%">
-              70% 
-            </div>
-          </div>
-        </div>
-        <br><br>
-        
-        <p id="demo" class="timer" style="font-size: 24vw;">Time Left</p>
-
+  <div class="row">
+    <div class = "logo">
+                <img src="logogame final.png">
+                <img id="inl" src="white.png">
+     </div>
+        <ul class="main-nav">
+          <li>
+          <p>  Welcome to Code Quest</p>
+        </li>   
+          <li>  
+        <p id="demo" class="timer" >Time Left</p>
+      </li>  
+      </ul>
+    </div>
 </body>
-
-
-
 
 </script>
 
