--- a/pass2.html
+++ b/pass2.html
@@ -5,7 +5,7 @@
     </head>
     <body  onload="noBack();"
 onpageshow="if(event.persisted) noBack():" onunload="" ;
-background="aven1.jpg">
+background="im2.jpg">
         <header>
            
        
