--- a/pass1.html
+++ b/pass1.html
@@ -51,7 +51,7 @@ var i=0;
  
  if(i<=3)
 {
-       if(a=="e")
+       if(a=="vision")
        { alert("You got it right " );
          window.location.replace("ques 2.html   ");
        }
