--- a/pass2.html
+++ b/pass2.html
@@ -23,7 +23,7 @@ background="im2.jpg">
             <div>
 
                 <label for="Solution"> Enter solution to riddle obtained at location<br> </label>
-                <input type="text" autocomplete="off" name="Solution"> 
+                <input type="text" autocomplete="off" name="q1"> 
             </div>
             <div>       
                 <input type="button" class="submit" value="Submit" onclick="myfunc ()">
