--- a/pass2.html
+++ b/pass2.html
@@ -52,7 +52,7 @@ var i=0;
  
  if(i<=3)
 {
-       if(a=="e")
+       if(a=="asgard")
        { alert("You got it right " );
          window.location.replace("ques3.html   ");
        }
