--- a/pass3.html
+++ b/pass3.html
@@ -23,7 +23,7 @@ background="im3.jpg">
                     <div>
         
                        <label for="Solution"> Enter solution to riddle obtained at location<br> </label>
-                       <input type="text" autocomplete="off"  name="Solution"> 
+                       <input type="text" autocomplete="off"  name="q1"> 
                     </div>
                     <div>       
                        <input type="button" class="submit" value="Submit" onclick="myfunc ()">
@@ -53,7 +53,7 @@ var i=0;
  
  if(i<=3)
 {
-       if(a=="e")
+       if(a=="bucky")
        { alert("You got it right " );
          window.location.replace("ques4.html   ");
        }
