--- a/pass4.html
+++ b/pass4.html
@@ -25,7 +25,7 @@ background="im4.jpg">
             <div>
 
                <label for="Solution">  Enter solution to riddle obtained at location<br> </label>
-               <input type="text" autocomplete="off" name="Solution"> 
+               <input type="text" autocomplete="off" name="q1"> 
             </div>
             <div>       
                <input type="button" class="submit" value="Submit" onclick="myfunc ()">
@@ -55,7 +55,7 @@ var i=0;
  
  if(i<=3)
 {
-       if(a=="e")
+       if(a=="sokovia")
        { alert("You got it right " );
          window.location.replace("Ques5.html   ");
        }
