--- a/ques1.html
+++ b/ques1.html
@@ -36,7 +36,7 @@ background= "coding5.gif">
                     <div>
         
                        <label for="Solution"> Enter Solution: <br></label>
-                       <input type="text" autocomplete="off" name="Solution" style:"color:white;"> 
+                       <input type="text" autocomplete="off" name="q1" style:"color:white;"> 
                     </div>
                     <div>     
 
