--- a/ques 2.html
+++ b/ques 2.html
@@ -74,7 +74,7 @@ background="bgq2.gif">
                     <div>
         
                        <label for="Solution"> Enter Solution: <br></label>
-                       <input type="text" autocomplete="off" name="Solution"> 
+                       <input type="text" autocomplete="off" name="q1"> 
                     </div>
                     <div>       
                        <input type="button" class="submit" value="Submit" onclick="myfunc ()">
