--- a/ques3.html
+++ b/ques3.html
@@ -85,7 +85,7 @@ else
                     <div>
         
                        <label for="Solution"> Solution </label>
-                       <input type="text" autocomplete="off" name="Solution"> 
+                       <input type="text" autocomplete="off" name="q1"> 
                     </div>
                     <div>      
                        <input type="button" class="submit" value="Submit" onclick="myfunc ()">
