--- a/ques4.html
+++ b/ques4.html
@@ -73,7 +73,7 @@ A sub-grid of houses can be uniquely defined by the coordinates of top left and 
                     <div>
         
                        <label for="Solution"> Solution </label>
-                       <input type="text" autocomplete="off" name="Solution"> 
+                       <input type="text" autocomplete="off" name="q1"> 
                     </div>
                     <div>      
                        <input type="button" class="submit" value="Submit" onclick="myfunc ()">
