--- a/Ques5.html
+++ b/Ques5.html
@@ -90,7 +90,7 @@ background="codinggif.gif">
                     <div>
         
                        <label for="Solution"> Solution </label>
-                       <input type="text" autocomplete="off" name="Solution"> 
+                       <input type="text" autocomplete="off" name="q1"> 
                     </div>
                     <div>     
                        <input type="button" class="submit" value="Submit" onclick="myfunc ()">
